--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,13 +33,7 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/txtEdit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0">
 
-        </TextView>
 
     </LinearLayout>
 
@@ -152,6 +146,31 @@
                 android:text="="
                 android:layout_height="wrap_content"/>
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            >
+            <TextView
+                android:id="@+id/txtEdit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0">
+
+            </TextView>
+
+            <TextView
+                android:id="@+id/txtOperacion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0">
+
+            </TextView>
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -175,5 +194,7 @@
             android:textSize="50dp"/>
 
     </LinearLayout>
+
+
 
 </LinearLayout>
